# maars

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile.sandbox  README.md  README_CN.md  maars.md  pyproject.toml  requirements.txt  start.bat  start.sh
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_CN.md  feature_request.md  feature_request_CN.md
.github/workflows/: ci.yml
backend/: README.md  config.py  db.py  kaggle.py  main.py  mode.py  models.py  package-lock.json  package.json  reproduce.py  requirements.txt  run.sh  server.js  utils.py  workers.js  workers.py
backend/adk/: __init__.py  bridge.py  runner.py
backend/agent/: __init__.py  base.py  execute.py  factory.py  plan.py  stages.py
backend/agents/: __init__.py  base.py  runner.py  session.py
backend/agno/: client.py  (+2 more)
docs/: DEPENDENCIES.md  DEVELOPMENT_GUIDE.md  FRONTEND_SCRIPTS.md  LARGE_FILE_SPLIT_PLAN.md  README.md  RELEASE_NOTE_STANDARD.md  RELEASE_NOTE_TEMPLATE.md  architecture.md  architecture_cn.md  cli.md  concept.md  graph.md  roadmap.md  thinking-area-design.md  video-script.md
frontend/: app.js  index.html  package-lock.json  research.html  research_detail.html  styles.css  task-tree.js  theme.css
scripts/: install_docker_mac.sh
site/: index.html
tests/: test_config.py  test_db.py  test_decompose.py  test_pipeline_input_resolution.py  test_research.py  test_sanitize.py  test_sessions_api.py  test_team_stage.py  test_topological.py  test_utils.py
(+693 files in other folders)
