[project]
name = "maars"
version = "0.1.0.dev0"
description = "Multi-Agent Automated Research System — LangGraph edition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dozy" }]

dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-tavily>=0.1.0",
    "pydantic>=2.9",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.9",
]

[project.scripts]
maars = "maars.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maars"]
